--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/vvicunag/techblogoly#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "sequelize": "^6.12.5"
