--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
